--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^12.23.6",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
@@ -67,6 +68,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
