--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,8 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# @mediaacross
+#Youtube API 
+YOUTUBE_API_KEY= AIzaSyASjxrpsyfnsQryKdC6AS_Qs-aDy3jU7D0
 
 # Email Configuration
 EMAIL_HOST=smtp.gmail.com
